--- a/estilo.css
+++ b/estilo.css
@@ -172,7 +172,7 @@ header ul li a:hover
 }
 .contenedor figure:hover
 {
-	box-shadow: 0px 0px 15px 0px var(--primary-color);
+	box-shadow: 0px 0px 15px 0px var(--seven-color);
 }
 .contenedor figure
 {
