--- a/estilo.css
+++ b/estilo.css
@@ -30,7 +30,7 @@ body::-webkit-scrollbar-thumb
 }
 body::-webkit-scrollbar-thumb:hover
 {
-	background: var(--primary-color);
+	background: var(--seven-color);
 }
 
 body 
@@ -51,7 +51,7 @@ h2
 	font-size: 6.5rem;
 	font-weight: bold;
 	color: var(--three-color);
-	background-color: var(--second-color);
+	background-color: transparent;
 	border-radius: 5px;
 	padding: 15px;
 	user-select: none;
@@ -162,10 +162,10 @@ header ul li a:hover
 }
 .contenedor figure
 {
-	display: inline-block;
+	display: inline-flex	;
 	margin: 40px 50px;
 	position: relative;
-	height: 350px;
+	min-height: 250px;
 	width: 350px;
 	overflow: hidden;
 	border-radius: 250px;
@@ -246,7 +246,7 @@ header ul li a:hover
 	text-decoration: underline;
 /*	border: 1px solid ;
 	border-radius: 50px;*/
-	color: var(--primary-color);
+	color: var(--seven-color);
 }
 	/* seccion contenedor 2 */
 
@@ -262,17 +262,17 @@ header ul li a:hover
 }
 .contenedordos figure
 {
-	display: inline-block;
+	display: inline-flex;
 	margin: 25px 50px;
 	position: relative;
-	min-height: 350px;
+	min-height: 250px;
 	width: 350px;
 	overflow: hidden;
 	border-radius: 250px;
 }
 .contenedordos figure:hover
 {
-	box-shadow: 0px 0px 15px 0px var(--primary-color);
+	box-shadow: 0px 0px 15px 0px var(--seven-color);
 }
 .contenedordos figure
 {
@@ -281,8 +281,7 @@ header ul li a:hover
 .contenedordos figure img
 {
 	width: 100%;
-	height: 100%;
-	transition: all 500ms ease-out;
+	transition: all ease 2s;
 }
 .contenedordos figure .capa
 {
@@ -308,10 +307,6 @@ header ul li a:hover
 .contenedordos figure:hover > img
 {
 	transform: scale(1.6);
-}
-.contenedordos figure > img
-{
-	transition: all ease 2s;
 }
 .contenedordos figure .capa h3
 {
@@ -346,11 +341,20 @@ header ul li a:hover
 	text-decoration: underline;
 /*	border: 1px solid ;
 	border-radius: 50px;*/
-	color: var(--primary-color);
+	color: var(--seven-color);
+}
+	/* seccion reponsive  contenedores*/
+
+@media screen 
+{
+
 }
 
+
+	/* seccion pie de la página */
 footer 
 {
+	margin-top: 50px;
 	user-select: none;
      position: relative;
      width: 100%;
