--- a/epica/albums.css
+++ b/epica/albums.css
@@ -17,7 +17,7 @@ html
 }
 body::-webkit-scrollbar 
 {
-    width: 7px;
+    width: 1rem;
     background: transparent;
 }
 body::-webkit-scrollbar-thumb
