--- a/ironmaiden/noplayerforthedying.css
+++ b/ironmaiden/noplayerforthedying.css
@@ -1,3 +1,14 @@
+:root
+{
+	--primary-color: rgb(244, 178, 66);
+	--second-color: black;
+	--three-color: white;
+	--four-color: gray;
+}
+html
+{
+	font-size: 62.5%;
+}
 *
 {
 	margin: 0;
@@ -35,20 +46,20 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: rgb(247, 187, 67);
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.7rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -58,8 +69,8 @@ header a
 }
 header a:hover
 {
-	background: rgb(247, 187, 67);
-	color: black;
+	background: var(--primary-color);
+	color: var(--second-color);
 	border-radius: 10px;
 	padding: auto;
 }
@@ -75,9 +86,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: rgb(247, 187, 67);
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -87,8 +98,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: rgb(247, 187, 67);
-	color:black;
+	background: var(--primary-color);
+	color:var(--second-color);
 	border-radius: 30px;
 }
 .content
@@ -103,7 +114,7 @@ header ul li a:hover
 .content .textBox h2
 {
 	user-select: none;
-	color: white;
+	color: var(--three-color);
 	font-size: 3.5em;
 	margin-bottom: 10px;
 	line-height: 1.2em;
@@ -112,13 +123,13 @@ header ul li a:hover
 .content .textBox p
 {
 	font-size: 35px;
-	color: white;
+	color: var(--three-color);
 	font-weight: bold;
 }
 .content .textBox a:hover
 {
-	background: black;
-	color: rgb(247, 187, 67);
+	background: var(--second-color);
+	color: var(--primary-color);
 }
 .content .textBox a
 {
@@ -126,9 +137,9 @@ header ul li a:hover
 	display: inline-block;
 	margin-top: 20px;
 	padding: 15px 30px;
-	background: rgb(247, 187, 67);
-	color: black;
-	font-size: 1.2em;
+	background: var(--primary-color);
+	color: var(--second-color);
+	font-size: 2.0em;
 	border-radius: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -153,15 +164,15 @@ header ul li a:hover
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     color: black;
-     background: rgb(247, 187, 67);
+     color: var(--second-color);
+     background: var(--primary-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s ease-in-out;
      text-decoration: none;
-     box-shadow: 0px 10px 7px 0px black;
+     box-shadow: 0px 10px 7px 0px var(--second-color);
      font-size: 30px;
 }
 /*.sci li a img
@@ -174,13 +185,13 @@ header ul li a:hover
 }*/
 .sci li a:hover
 {
-     background: black;
+     background: var(--second-color);
      box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: rgb(247, 187, 67);
+	color: var(--primary-color);
 }
 section 
 {
@@ -203,7 +214,7 @@ section
 	margin: -10px;
 	padding: 0px;
 	border-radius: 50px;
-	box-shadow: 5px 0px 40px 5px rgb(247, 187, 67);
+	box-shadow: 5px 0px 40px 5px var(--primary-color);
 }
 
 footer 
@@ -211,13 +222,13 @@ footer
 	width: auto;
 	height: auto;
 	font-weight: bold;
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--four-color);
 }
 footer p
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 2.1rem;
 }
 /* colores estilo sombreado y color de fondo de la imagenes */
 
