--- a/kiss/unmasked.css
+++ b/kiss/unmasked.css
@@ -1,3 +1,14 @@
+:root
+{
+     --primary-color: rgb(161, 101, 107);
+     --second-color: black;
+     --three-color: white;
+     --four-color: gray; 
+}
+html
+{
+     font-size: 62.5%;
+}
 *
 {
 	margin: 0;
@@ -36,7 +47,7 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
@@ -49,7 +60,7 @@ header .logo
 	position: relative;
 	color: rgb(161, 101, 107);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.7rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -71,7 +82,7 @@ header ul li a
 	display: inline-block;
 	color: rgb(161, 101, 107);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -82,7 +93,7 @@ header ul li a.active,
 header ul li a:hover
 {
 	background: rgb(161, 101, 107);
-	color:black;
+	color: black;
 	border-radius: 30px;
 }
 .content
@@ -122,7 +133,7 @@ header ul li a:hover
 	padding: 15px 30px;
 	background: rgb(161, 101, 107);
 	color: black;
-	font-size: 1.2em;
+	font-size: 2.0em;
 	border-radius: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -206,35 +217,10 @@ footer
 	height: auto;
 	font-weight: bold;
 	background: black;
-	color: gray;
+	color: var(--four-color);
 }
 footer p
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 2.1rem;
 }
-/* colores estilo sombreado y color de fondo de la imagenes */
-
-/* .pie .pagina img:hover {
-	border-radius: 100px;
-	background: linear-gradient(315deg,rgb(0, 204, 255),blue);
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(0, 162, 255);
-	transition: all 100ms ease;
-}
-
-.pie2 .pagina2 img:hover {
-	border-radius: 18px;
-	background: linear-gradient(315deg,red,rgb(255, 255, 255));
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(255, 1, 1);
-	transition: all 100ms ease;
-}
-
-.pie3 .pagina3 img:hover {
-	border-radius: 15px;
-	background: linear-gradient(315deg,pink,rgb(248, 7, 168));
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(255, 7, 152);
-	transition: all 100ms ease;
-} */
