--- a/judaspriest/albums.css
+++ b/judaspriest/albums.css
@@ -1,3 +1,14 @@
+:root
+{
+	--primary-color: red;
+	--second-color: black;
+	--three-color: white;
+	--four-color: gray;
+}
+html
+{
+	font-size: 62.5%;
+}
 *
 {
 	margin:0;
@@ -6,20 +17,20 @@
 }
 body::-webkit-scrollbar 
 {
-    width: 7px;
+    width: 1rem;
     background: transparent;
 }
 body::-webkit-scrollbar-thumb
 {
-	background: red;
+	background: var(--primary-color);
 	border-radius: 50px;
 }
 body 
 {
-	background: black;
+	background: var(--second-color);
 	background-position: center;
 	font-weight: bold;
-	color: red;
+	color: var(--primary-color);
 }
 
 body p
@@ -37,14 +48,14 @@ body p
 	height: auto;
 	width: auto;
 	text-align: center;
-	font-size: 70px;
+	font-size: 9.9rem;
 	background: url('../img/detodo/backgroundalbums.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	overflow: hidden;
 	user-select: none;
-	color: white;
+	color: var(--three-color);
 }
 
 header
@@ -52,20 +63,20 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: red;
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.5rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -85,9 +96,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: red;
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -97,8 +108,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: red;
-	color:#ffff;
+	background: var(--primary-color);
+	color:var(--three-color);
 	border-radius: 30px;
 }
 
@@ -127,9 +138,9 @@ header ul li a:hover
 	-o-transform: perspective(300px) rotateY(180deg);
 	transform: perspective(300px) rotateY(180deg);
 
-	-webkit-box-shadow:0px 2px 10px 2px white;
-	-moz-box-shadow:0px 2px 10px 2px white;
-	box-shadow:0px 2px 10px 2px white;
+	-webkit-box-shadow:0px 2px 10px 2px var(--three-color);
+	-moz-box-shadow:0px 2px 10px 2px var(--three-color);
+	box-shadow:0px 2px 10px 2px var(--three-color);
 	border-radius: 13px;
 }
 
@@ -165,12 +176,12 @@ figure .trasera {
 	position: absolute;
 	top: 0;
 	padding: 0px;
-	color: white;
+	color: var(--three-color);
 	transform: perspective(300px) rotateY(180deg) ;
 	backface-visibility: hidden;
 	overflow: auto;
 
-	background: black;
+	background: var(--second-color);
 }
 
 /*.contenedor_tarjeta:nth-child(1,2,3,4,5,6,7,8,9) figure .trasera {	
@@ -179,7 +190,7 @@ figure .trasera {
 
 figure .trasera .titulo {
 	text-align: center;
-	color:white;
+	color:var(--three-color);
 	font-weight: normal;
 	margin-bottom: 20px;
 	font-size: 24px;
@@ -189,7 +200,7 @@ figure .trasera .titulo {
 
 figure .trasera hr {
 	height: 1px;
-	background: white;
+	background: var(--three-color);
 	border:none;
 	margin-bottom: 20px;
 	opacity: .5s;
@@ -221,15 +232,15 @@ figure .trasera p {
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     color: red;
-     background: black;
+     color: var(--primary-color);
+     background: var(--second-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s ease-in-out;
      text-decoration: none;
-     box-shadow: 0px 10px 7px 0px red;
+     box-shadow: 0px 10px 7px 0px var(--primary-color);
      font-size: 30px;
 }
 /*.sci li a img
@@ -242,13 +253,13 @@ figure .trasera p {
 }*/
 .sci li a:hover
 {
-     background: red;
+     background: var(--primary-color);
      box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: #fff;
+	color: var(--three-color);
 }
 footer 
 {
@@ -259,7 +270,7 @@ footer
      display: flex;
      justify-content: flex-start;
      align-items: center;
-     background: black;
+     background: var(--second-color);
      background-size: auto;
      background-position: 0% 900%;
      background-attachment: fixed;
@@ -274,34 +285,10 @@ footer p
 }
 .derechos
 {
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--four-color);
 }
 .derechos p
 {
-	font-size: 20px;
+	font-size: 2.1rem;
 }
-
-/* .pie .pagina img:hover {
-	border-radius: 100px;
-	background: linear-gradient(315deg,rgb(0, 204, 255),blue);
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(0, 162, 255);
-	transition: all 100ms ease;
-}
-
-.pie2 .pagina2 img:hover {
-	border-radius: 18px;
-	background: linear-gradient(315deg,red,rgb(255, 255, 255));
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(255, 1, 1);
-	transition: all 100ms ease;
-}
-
-.pie3 .pagina3 img:hover {
-	border-radius: 15px;
-	background: linear-gradient(315deg,pink,rgb(248, 7, 168));
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(255, 7, 152);
-	transition: all 100ms ease;
-} */
