--- a/judaspriest/angelofretribution.css
+++ b/judaspriest/angelofretribution.css
@@ -47,20 +47,20 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: rgb(159, 172, 173);
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.7rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -80,9 +80,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: rgb(159, 172, 173);
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -92,8 +92,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: rgb(159, 172, 173);
-	color:black;
+	background: var(--primary-color);
+	color:var(--second-color);
 	border-radius: 30px;
 }
 .content
@@ -108,7 +108,7 @@ header ul li a:hover
 .content .textBox h2
 {
 	user-select: none;
-	color: white;
+	color: var(--three-color);
 	font-size: 3.5em;
 	margin-bottom: 10px;
 	line-height: 1.2em;
@@ -117,13 +117,13 @@ header ul li a:hover
 .content .textBox p
 {
 	font-size: 35px;
-	color: white;
+	color: var(--three-color);
 	font-weight: bold;
 }
 .content .textBox a:hover
 {
-	background: black;
-	color: rgb(159, 172, 173);
+	background: var(--second-color);
+	color: var(--primary-color);
 }
 .content .textBox a
 {
@@ -131,9 +131,9 @@ header ul li a:hover
 	display: inline-block;
 	margin-top: 20px;
 	padding: 15px 30px;
-	background: rgb(159, 172, 173);
-	color: black;
-	font-size: 1.2em;
+	background: var(--primary-color);
+	color: var(--second-color);
+	font-size: 2.0em;
 	border-radius: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -158,15 +158,15 @@ header ul li a:hover
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     color: black;
-     background: rgb(159, 172, 173);
+     color: var(--second-color);
+     background: var(--primary-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s ease-in-out;
      text-decoration: none;
-     box-shadow: 0px 10px 7px 0px black;
+     box-shadow: 0px 10px 7px 0px var(--second-color);
      font-size: 30px;
 }
 /*.sci li a img
@@ -179,13 +179,13 @@ header ul li a:hover
 }*/
 .sci li a:hover
 {
-     background: black;
+     background: var(--second-color);
      box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: rgb(159, 172, 173);
+	color: var(--primary-color);
 }
 section 
 {
@@ -208,7 +208,7 @@ section
 	margin: -10px;
 	padding: 0px;
 	border-radius: 50px;
-	box-shadow: 5px 0px 40px 5px rgb(159, 172, 173);
+	box-shadow: 5px 0px 40px 5px var(--primary-color);
 }
 
 footer 
@@ -216,36 +216,11 @@ footer
 	width: auto;
 	height: auto;
 	font-weight: bold;
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--four-color);
 }
 footer p
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 2.1rem;
 }
-/* colores estilo sombreado y color de fondo de la imagenes */
-
-/* .pie .pagina img:hover {
-	border-radius: 100px;
-	background: linear-gradient(315deg,rgb(0, 204, 255),blue);
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(0, 162, 255);
-	transition: all 100ms ease;
-}
-
-.pie2 .pagina2 img:hover {
-	border-radius: 18px;
-	background: linear-gradient(315deg,red,rgb(255, 255, 255));
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(255, 1, 1);
-	transition: all 100ms ease;
-}
-
-.pie3 .pagina3 img:hover {
-	border-radius: 15px;
-	background: linear-gradient(315deg,pink,rgb(248, 7, 168));
-	box-shadow: 0px 0px 80px 10px;
-	color: rgb(255, 7, 152);
-	transition: all 100ms ease;
-} */
