--- a/kiss/unmasked.css
+++ b/kiss/unmasked.css
@@ -53,12 +53,12 @@ header
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: rgb(161, 101, 107);
+	color: var(--primary-color);
 	display: inline-block;
 	font-size: 2.7rem;
 	text-decoration: none;
@@ -80,7 +80,7 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: rgb(161, 101, 107);
+	color: var(--primary-color);
 	font-weight: 600;
 	font-size: 1.6rem;
 	margin-left: 10px;
@@ -92,8 +92,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: rgb(161, 101, 107);
-	color: black;
+	background: var(--primary-color);
+	color: var(--second-color);
 	border-radius: 30px;
 }
 .content
@@ -108,7 +108,7 @@ header ul li a:hover
 .content .textBox h2
 {
 	user-select: none;
-	color: black;
+	color: var(--three-color);
 	font-size: 3.5em;
 	margin-bottom: 10px;
 	line-height: 1.2em;
@@ -117,13 +117,13 @@ header ul li a:hover
 .content .textBox p
 {
 	font-size: 35px;
-	color: black;
+	color: var(--three-color);
 	font-weight: bold;
 }
 .content .textBox a:hover
 {
-	background: black;
-	color: rgb(161, 101, 107);
+	background: var(--second-color);
+	color: var(--primary-color);
 }
 .content .textBox a
 {
@@ -131,8 +131,8 @@ header ul li a:hover
 	display: inline-block;
 	margin-top: 20px;
 	padding: 15px 30px;
-	background: rgb(161, 101, 107);
-	color: black;
+	background: var(--primary-color);
+	color: var(--second-color);
 	font-size: 2.0em;
 	border-radius: 40px;
 	font-weight: 700;
@@ -158,15 +158,15 @@ header ul li a:hover
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     color: black;
-     background: rgb(161, 101, 107);
+     color: var(--second-color);
+     background: var(--primary-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s ease-in-out;
      text-decoration: none;
-     box-shadow: 0px 10px 7px 0px black;
+     box-shadow: 0px 10px 7px 0px var(--second-color);
      font-size: 30px;
 }
 /*.sci li a img
@@ -179,13 +179,13 @@ header ul li a:hover
 }*/
 .sci li a:hover
 {
-     background: black;
+     background: var(--second-color);
      box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: rgb(161, 101, 107);
+	color: var(--primary-color);
 }
 section 
 {
@@ -208,7 +208,7 @@ section
 	margin: -10px;
 	padding: 0px;
 	border-radius: 50px;
-	box-shadow: 5px 0px 40px 5px rgb(161, 101, 107);
+	box-shadow: 5px 0px 40px 5px var(--primary-color);
 }
 
 footer 
@@ -216,7 +216,7 @@ footer
 	width: auto;
 	height: auto;
 	font-weight: bold;
-	background: black;
+	background: var(--second-color);
 	color: var(--four-color);
 }
 footer p
